--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,9 @@ services:
       DB_NAME: ${STORAGE_DB}
       DB_USER: ${STORAGE_USER}
       DB_PASS: ${STORAGE_PASSWORD}
+      PGPASSWORD: ${STORAGE_PASSWORD}
+    depends_on: 
+      - storage
   postgrest:
     image: postgrest/postgrest
     ports:
@@ -26,4 +29,6 @@ services:
       PGRST_DB_URI: postgres://${STORAGE_USER}:${STORAGE_PASSWORD}@${STORAGE_HOST}/${STORAGE_DB}
       PGRST_DB_ANON_ROLE: macroscope_anon
       PGRST_DB_SCHEMA: warehouse
+    depends_on: 
+      - storage
 
