--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,12 +23,21 @@ services:
       - storage
   postgrest:
     image: postgrest/postgrest
-    ports:
-      - "80:3000"
     environment:
       PGRST_DB_URI: postgres://${STORAGE_USER}:${STORAGE_PASSWORD}@${STORAGE_HOST}/${STORAGE_DB}
       PGRST_DB_ANON_ROLE: macroscope_anon
       PGRST_DB_SCHEMA: warehouse
+      PGRST_SERVER_PROXY_URI: http://localhost/api
     depends_on: 
       - storage
+  swagger-ui:
+    image: swaggerapi/swagger-ui
+    environment: 
+      URL: http://localhost/api
+  webserver:
+    image: nginx:1.17
+    volumes:
+      - "./webserver/nginx.conf:/etc/nginx/nginx.conf:ro"
+    ports:
+      - "80:80"
 
