--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ STORAGE_PASSWORD=30e433a6-0732-4ae7-8e50-a0014f4aaa26
 STORAGE_USER=macroscope_admin
 STORAGE_DB=macroscope
 STORAGE_HOST=storage
+INGRESS_HOST=localhost
