--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,4 +41,11 @@ services:
       - "./webserver/nginx.conf:/etc/nginx/nginx.conf:ro"
     ports:
       - "80:80"
+  mortal-economics:
+    image: nginx:1.17
+    volumes:
+      - "./me/build/site/:/usr/share/nginx/html:ro"
+      - "./me/nginx.conf:/etc/nginx/nginx.conf:ro"
+    ports:
+      - "80:80"
 
