--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,7 +44,7 @@ services:
   mortal-economics:
     image: nginx:1.17
     volumes:
-      - "./me/build/site/:/usr/share/nginx/html:ro"
+      - "./me/build/site/:/usr/share/nginx/html"
       - "./me/nginx.conf:/etc/nginx/nginx.conf:ro"
     ports:
       - "80:80"
