--- a/me/nginx.conf
+++ b/me/nginx.conf
@@ -9,6 +9,7 @@ http {
       root /usr/share/nginx/html;
       autoindex on;
       autoindex_exact_size off;
+      gzip_static on;
     }
   }
 }
