Add explicit check for index.html.gz

--- a/me/nginx.conf
+++ b/me/nginx.conf
@@ -5,6 +5,7 @@ http {
   server {
     listen 80;
     server_name localhost www.mortaleconomics.com;
+    index index.html index.html.gz;
     location / {
       root /usr/share/nginx/html;
       autoindex on;
